fix spacing in dashboard

--- a/app/base/static/assets/css/vis/health-board-overview.css
+++ b/app/base/static/assets/css/vis/health-board-overview.css
@@ -70,7 +70,7 @@ text.bigNumber{
 
 .title{
     font-weight: bold;
-    font-size: 20;
+    font-size:12pt;
 }
 
 text.cartogramLabel{
